--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,3 +1,17 @@
 [login_server]
 host=127.0.0.1
 port=8003
+
+[mysql]
+host=127.0.0.1
+port=3316
+user=root
+passwd=root
+dbname=three-kingdoms-game
+charset=utf8
+max_idle=2
+max_conn=10
+
+[web_server]
+host=127.0.0.1
+port=8088
